--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Social Media Feed</h1>
-    <div id="feed"></div>
+    <div id="feed">Loading …</div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="SocialFeed.js"></script>
   </body>
