--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Social Media Feed</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h1>Social Media Feed</h1>
-    <div id="feed">Loading …</div>
+    <p id="loading">Loading …</p>
+    <div id="feed"></div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="SocialFeed.js"></script>
   </body>
